<resources>
    <string name="app_name">TANIALTECH</string>
    <string name="dashboard_menu_label">Dashboard</string>
    <string name="activity_menu_label">Kegiatan</string>
    <string name="field_menu_label">Ladang</string>
    <string name="article_menu_label">Artikel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">"Hello, "</string>
    <string name="username">Fakhri</string>
    <string name="location">Bandung, Indonesia</string>
    <string name="date">Minggu, 13 Maret 2023</string>
    <string name="temperature">25°C</string>
    <string name="label_kelembapan">Kelembapan</string>
    <string name="label_angin">Angin</string>
    <string name="label_tekanan">Tekanan</string>
    <string name="profile_description">profile</string>
    <string name="cloud_status">cloud</string>
    <string name="informasi_kelembapan">80%</string>
    <string name="informasi_angin">20m/s</string>
    <string name="informasi_tekanan">110 Kpa</string>
    <string name="header_daily_activity">Kegiatan Harian</string>
    <string name="see_more_navigation">Lihat Semua</string>
    <string name="checkbox_label">Siram tanaman di ladang Selada S-01</string>
    <string name="time">08.00 - 10.30</string>
    <string name="header_field_activity">Ladang Saya</string>
    <string name="card_title">Ladang Kentang</string>
    <string name="code_id">K-01</string>
    <string name="Ladang">ladang</string>
    <string name="title_Search_ladang">Cari ladang mu disini</string>
    <string name="card_label">card label</string>
    <string name="header_article_activity">Artikel Lainnya</string>
    <string name="article">article</string>
    <string name="lorem_ipsum_dolor_sit_amet">Lorem ipsum dolor sit amet</string>
    <string name="consectetur_adipiscing_elit_sed_do_eiusmod_tempor">consectetur adipiscing elit, sed do\neiusmod tempor</string>
    <string name="article_date">12 April 2024</string>
    <string name="search">"Cari "</string>
    <string name="Referance">Referensi</string>
    <string name="search_placeholder">Cari artikel disini</string>
    <string name="header_article_article_activity">Untuk Kamu</string>
    <string name="date_article">12 April 2024</string>
    <string name="article_title">Dijamin Subur! Tanam Sawi hingga...</string>
    <string name="title_detail_article">Tutorial</string>
    <string name="arrow_back">arrow back</string>
    <string name="back"><![CDATA[<--]]></string>
    <string name="forward"><![CDATA[-->]]></string>
</resources>