<androidx.cardview.widget.CardView
    android:id="@+id/article_1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="0dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >

        <ImageView
            android:id="@+id/article_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/frame_article_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/article"
            />

        <TextView
            android:id="@+id/article_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum_dolor_sit_amet"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintStart_toEndOf="@+id/article_image"
            app:layout_constraintTop_toTopOf="@+id/article_image"
            android:fontFamily="@font/maison_neue_bold"
            android:textSize="14sp"
            android:layout_marginHorizontal="10dp"
            />

        <TextView
            android:id="@+id/article_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/consectetur_adipiscing_elit_sed_do_eiusmod_tempor"
            app:layout_constraintTop_toBottomOf="@+id/article_title"
            app:layout_constraintStart_toStartOf="@id/article_title"
            android:fontFamily="@font/maison_neue_book"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/article_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/article_date"
            app:layout_constraintStart_toStartOf="@id/article_title"
            app:layout_constraintTop_toBottomOf="@+id/article_desc"
            app:layout_constraintBottom_toBottomOf="@+id/article_image"
            android:fontFamily="@font/maison_neue_book"
            android:textSize="12sp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>