<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:strokeColor="@android:color/transparent"
    android:layout_marginHorizontal="10dp"
    app:strokeWidth="0dp"
    app:cardElevation="0dp"
    app:cardCornerRadius="0dp"
    tools:ignore="MissingDefaultResource">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_article_for_you"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            >

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/card_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/card_title"
                android:src="@drawable/pic_1"
                app:shapeAppearanceOverlay="@style/RoundedImageview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:scaleType="centerCrop"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/card_label"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/card_label"
                />

            <TextView
                android:id="@+id/article_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/maison_neue_medium"
                android:text="@string/date_article"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/card_image"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/article_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/maison_neue_bold"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/article_title"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/article_date"
                app:layout_constraintStart_toStartOf="parent"
                android:maxWidth="113dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</com.google.android.material.card.MaterialCardView>