<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".DashboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
            android:id="@+id/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/green"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/hello"
            android:layout_marginTop="20dp" />

        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/user"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/container"
            app:layout_constraintTop_toBottomOf="@+id/profile_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            />

        <ImageView
            android:id="@+id/location_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/location"
            app:layout_constraintTop_toBottomOf="@+id/profile_icon"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="35dp"
            />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            app:layout_constraintStart_toEndOf="@+id/location_icon"
            app:layout_constraintTop_toBottomOf="@+id/profile_icon"
            android:layout_marginTop="30dp"
            android:layout_marginStart="2dp"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location"
            android:layout_marginTop="3dp"
            android:layout_marginStart="42dp"
            android:textSize="11sp"
            />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date"
            android:layout_marginTop="0dp"
            android:layout_marginStart="40dp"
            android:textSize="24sp"
            android:textStyle="bold"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cloudy"
            app:layout_constraintTop_toBottomOf="@+id/profile_icon"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="30dp"
            />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/temperature"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            />

        <ImageView
            android:id="@+id/kelembapan"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/kelembapan"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/angin"
            android:layout_marginTop="10dp"
            />

        <ImageView
            android:id="@+id/angin"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/angin"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layout_constraintStart_toEndOf="@+id/kelembapan"
            app:layout_constraintEnd_toStartOf="@+id/tekanan"
            android:layout_marginTop="10dp"
            />

        <ImageView
            android:id="@+id/tekanan"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/tekanan"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layout_constraintStart_toEndOf="@+id/angin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/label_kelembapan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_kelembapan"
            app:layout_constraintTop_toBottomOf="@+id/kelembapan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/label_angin"
            android:layout_marginEnd="15dp"
            android:textSize="11sp"
            />

        <TextView
            android:id="@+id/label_angin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_angin"
            app:layout_constraintTop_toBottomOf="@+id/angin"
            app:layout_constraintStart_toEndOf="@+id/label_kelembapan"
            app:layout_constraintEnd_toStartOf="@+id/label_tekanan"
            android:layout_marginEnd="20dp"
            android:textSize="11sp"
            />

        <TextView
            android:id="@+id/label_tekanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_tekanan"
            app:layout_constraintTop_toBottomOf="@+id/tekanan"
            app:layout_constraintStart_toEndOf="@+id/label_angin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            android:textSize="11sp"
            />

        
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>