<!-- field_card.xml -->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/card_image"
            android:src="@drawable/pic_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/card_title"
            app:shapeAppearanceOverlay="@style/RoundedImageview" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/card_label"
            android:contentDescription="@string/card_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/card_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:fontFamily="@font/maison_neue_bold"
            android:text="@string/card_title"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/card_image"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="3dp" />

        <TextView
            android:id="@+id/card_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/maison_neue_medium"
            android:text="@string/code_id"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/card_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="3dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
