<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:id="@+id/container_article_page"
    tools:context=".article.ArticleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/article_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/green"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="22dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/maison_neue_bold"
            />

        <TextView
            android:id="@+id/reference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Referance"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/search_title"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/maison_neue_bold"
            />

        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/user"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/profile_description"
            />

        <RelativeLayout
            android:id="@id/search_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/search_title"
            >

            <EditText
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_placeholder"
                android:inputType="text"
                android:autofillHints="search"
                android:drawableEnd="@drawable/ion_search_gua"
                android:background="@drawable/input_search"
                android:padding="15dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/maison_neue_book"
                android:textSize="12sp"
                />

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/section1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_input"
            android:background="@color/white"
            >

            <TextView
                android:id="@+id/field_activity_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/maison_neue_bold"
                android:text="@string/header_article_article_activity"
                android:textSize="16sp"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewArticle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:scrollbars="horizontal"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/field_activity_header" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/section4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/section1"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            >

            <TextView
                android:id="@+id/article_activity_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_article_activity"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="16sp"
                android:fontFamily="@font/maison_neue_bold"
                />

                <androidx.recyclerview.widget.RecyclerView
                    tools:listitem="@layout/more_article_item"
                    android:id="@+id/more_article"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:scrollbars="vertical"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/article_activity_header" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>