<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:id="@+id/fragment_container"
    tools:context=".field.FieldFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/atas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/pantau"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pantau"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="22dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/maison_neue_bold"
            />

        <TextView
            android:id="@+id/ladang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ladang"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/green"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pantau"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/maison_neue_bold"
            />

        <TextView
            android:id="@+id/kamu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="mu!"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ladang"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/maison_neue_bold"
            />

        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/user"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/profile_description"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/atas"
        >

        <EditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_Search_ladang"
            android:fontFamily="@font/maison_neue_book"
            android:drawableEnd="@drawable/ion_search_gua"
            android:background="@drawable/searchview_background"
            android:padding="15dp"
            android:drawablePadding="10dp"
            android:singleLine="true"
            android:textSize="12sp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/tambah_dan_hapus_ladang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_layout"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        >
        <RelativeLayout
            android:id="@+id/tombol_tambah_ladang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tombol_tambah_ladang"
            android:padding="10dp">
            <ImageView
                android:id="@+id/plus"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/plus1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tambah Ladang"
                android:layout_toEndOf="@id/plus"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/maison_neue_medium"
                android:textSize="15sp"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:background="@drawable/tombol_tambah_ladang"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:src="@drawable/trash"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>


    </RelativeLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:background="@color/white"
        android:layout_width="376dp"
        android:layout_height="452dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tambah_dan_hapus_ladang" />





</androidx.constraintlayout.widget.ConstraintLayout>